--- a/hand_made/templates/login.html
+++ b/hand_made/templates/login.html
@@ -26,8 +26,7 @@
 				{% for field in form %}
 				<div class="form-group">
 					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-					<input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
-						id="{{ field.id_for_label }}" required class="form-input" placeholder="{{ field.label }}">
+					{{ field }}
 					{% if field.errors %}
 					<p class="form-error">{{ field.errors|join:", " }}</p>
 					{% endif %}
