--- a/hand_made/templates/register.html
+++ b/hand_made/templates/register.html
@@ -26,9 +26,7 @@
                 {% for field in form %}
                 <div class="form-group">
                     <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                    <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
-                        id="{{ field.id_for_label }}" class="form-input" {% if field.field.required %}required{% endif
-                        %}>
+                    {{ field }}
                     {% if field.help_text %}
                     <p class="form-help">{{ field.help_text }}</p>
                     {% endif %}
